# ComfyUI-OpenPose-Studio

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  __init__.py  nodes.py  pyproject.toml
.github/: FUNDING.yml
assets/: openpose_editor.css
docs/: CONTRIBUTING.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-TW.md  README.zh.md  TODO.md  TRANSLATING_README.md  TRANSLATING_UI.md
js/: canvas2d.js  comfy-theme-colors.js  main.js  show_string.js  ui-icons.js  utils.js
js/formats/: coco17.js  coco18.js  index.js
js/modules/: about.js  editor.js  gallery.js  guide.js  i18n.js  index.js  merger.js  render.js
locales/de/: nodeDefs.json  ui.json
locales/en/: nodeDefs.json  ui.json
locales/es/: nodeDefs.json  ui.json
locales/fr/: nodeDefs.json  ui.json
locales/ja/: nodeDefs.json  ui.json
locales/ko/: nodeDefs.json  ui.json
locales/pt/: nodeDefs.json  ui.json
locales/ru/: nodeDefs.json  ui.json
locales/zh/: nodeDefs.json  ui.json
locales/zh-TW/: nodeDefs.json  ui.json
poses/: Sitting.json  Walking.json  back-to-back.json  dynamic.json  hugging.json  jumping.json  leaning.json  reference-sheet.json  seiza.json  wariza.json
poses/dev/: stickman_coco17_ultralytics.json  stickman_legacy_node.json  stickman_openpose.json
poses/misc/: aiming.json  balancing.json  boxing.json  carrying.json  contrapposto.json  covering.json  crossed-arms.json  crossed-legs.json  dozing.json  duo-holding-hands.json  dynamic.json  (+15 more)
tests/: test_normalize_pose_json.py  test_pose_library.py
