[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-openpose-studio"
version = "2.0.0"
description = "Create and edit multi-person OpenPose poses visually, with presets and ControlNet-ready image, JSON, and keypoint outputs."
readme = "docs/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/andreszs/comfyui-openpose-studio"
Documentation = "https://github.com/andreszs/comfyui-openpose-studio/blob/main/docs/README.md"
"Bug Tracker" = "https://github.com/andreszs/comfyui-openpose-studio/issues"

[tool.comfy]
PublisherId = "andreszs"
DisplayName = "OpenPose Studio"
Icon = ""
Banner = "https://raw.githubusercontent.com/andreszs/comfyui-openpose-studio/refs/heads/main/assets/banner_182.gif"
